--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "webpack": "webpack",
+    "build": "webpack",
+    "build:prod": "webpack -p",
     "server": "webpack-dev-server",
     "dev": "npm-run-all --parallel webpack server",
     "lint:scss": "gulp lint:style",
@@ -15,19 +16,33 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "babel": "^6.23.0",
+    "babel-eslint": "^10.0.1",
+    "clean-webpack-plugin": "^1.0.0",
     "css-loader": "^1.0.0",
+    "eslint": "^5.10.0",
+    "eslint-config-prettier": "^3.3.0",
+    "eslint-loader": "^2.1.1",
+    "eslint-plugin-prettier": "^3.0.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
     "gulp": "^4.0.0",
     "gulp-stylelint": "^8.0.0",
+    "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "husky": "^1.2.1",
+    "image-webpack-loader": "^4.6.0",
+    "lint-staged": "^8.1.0",
+    "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.9.2",
     "npm-run-all": "^4.1.3",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
     "prettier": "^1.15.3",
     "prettier-stylelint": "^0.4.2",
     "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
     "stylelint": "^9.9.0",
+    "uglifyjs-webpack-plugin": "^2.0.1",
     "url-loader": "^1.0.1",
     "webpack": "^4.16.0",
     "webpack-cli": "^3.0.8",
