CV: add prettier, linters, fixing errors

--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,5 +1,5 @@
 {
-  "./src/js/*.js": "./node_modules/.bin/eslint",
-  "./src/scss/**/*.scss": ["./node_modules/.bin/stylelint", "prettier-stylelint --write ./src/scss/**/*.scss"],
-  "**/*.js": ["./node_modules/.bin/prettier", "prettier --write '**/*.js'"]
+  "./**/*.scss": ["prettier-stylelint --write", "stylelint", "git add ."],
+  "./**/*.js": ["prettier", "eslint" ,"prettier --write'", "git add ."],
+  "./**/*.html": ["prettier --parser 'html' --write", "git add ."]
 }
