--- a/package.json
+++ b/package.json
@@ -9,28 +9,32 @@
     "server": "webpack-dev-server",
     "dev": "npm-run-all --parallel webpack server",
     "lint:scss": "gulp lint:style",
+    "lint:js": "eslint 'src/js/index.js'",
+    "lint:all": "npm run lint:scss && npm run lint:js",
     "prettier:scss": "prettier-stylelint --write ./src/scss/**/*.scss",
     "prettier:js": "prettier --write '**/*.js'",
-    "prettier:all": "npm run prettier:scss && npm run prettier:js"
+    "prettier:html": "prettier --parser 'html' --write '**/*.html'",
+    "prettier:all": "npm run prettier:scss && npm run prettier:js && npm run prettier:html"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/register": "^7.0.0",
     "babel": "^6.23.0",
     "babel-eslint": "^10.0.1",
     "clean-webpack-plugin": "^1.0.0",
     "css-loader": "^1.0.0",
-    "eslint": "^5.10.0",
+    "eslint": "^5.11.1",
     "eslint-config-prettier": "^3.3.0",
     "eslint-loader": "^2.1.1",
-    "eslint-plugin-prettier": "^3.0.0",
+    "eslint-plugin-prettier": "^3.0.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
     "gulp": "^4.0.0",
     "gulp-stylelint": "^8.0.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
-    "husky": "^1.2.1",
+    "husky": "^1.3.1",
     "image-webpack-loader": "^4.6.0",
     "lint-staged": "^8.1.0",
     "mini-css-extract-plugin": "^0.5.0",
