--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "build:prod": "webpack -p",
     "server": "webpack-dev-server",
     "dev": "npm-run-all --parallel webpack server",
-    "lint:scss": "gulp lint:style",
-    "lint:js": "eslint 'src/js/index.js'",
+    "lint:scss": "stylelint './**/*.scss'",
+    "lint:js": "eslint './**/*.js'",
     "lint:all": "npm run lint:scss && npm run lint:js",
     "prettier:scss": "prettier-stylelint --write ./src/scss/**/*.scss",
-    "prettier:js": "prettier --write '**/*.js'",
-    "prettier:html": "prettier --parser 'html' --write '**/*.html'",
+    "prettier:js": "prettier --write './**/*.js'",
+    "prettier:html": "prettier --parser 'html' --write './**/*.html'",
     "prettier:all": "npm run prettier:scss && npm run prettier:js && npm run prettier:html"
   },
   "author": "",
@@ -30,8 +30,6 @@
     "eslint-plugin-prettier": "^3.0.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
-    "gulp": "^4.0.0",
-    "gulp-stylelint": "^8.0.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^1.3.1",
